kubernetes/infrastructure/traefik-external.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: basic-auth
spec:
  basicAuth:
    secret: basic-auth-credentials


---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: private
spec:
  ipWhiteList:
    sourceRange:
      - 127.0.0.1/32
      - 192.168.0.0/16
        #- 10.0.0.0/8


---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
spec:
  entryPoints:
    - websecure
  routes:
    # TODO: do better than this hard-coded host.  Docs recommend something like traefik.localhost.  That might require a network DNS server or somesuch
    - match: Host(`192.168.0.201`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
